api dsdv & dsdb
