# backend-api/routes/api.php
@@ -24,3 +24,7 @@ Route::get('/getUsers', [\App\Http\Controllers\AuthController::class, 'getUsers'
 Route::get('/thuetainguyen', [\App\Http\Controllers\ThueTaiNguyenController::class, 'index']);
 Route::get('/thuetainguyen/{mahs}', [\App\Http\Controllers\ThueTaiNguyenController::class, 'show']);
 
+Route::get('/dsdonvi', [\App\Http\Controllers\AdministrativeController::class, 'getDonVi']);
+Route::get('/dsdiaban', [\App\Http\Controllers\AdministrativeController::class, 'getDiaBan']);
+
+
